--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -4,12 +4,16 @@ spring.thymeleaf.cache=false
 spring.datasource.jmx-enabled=false
 
 # mysql connection details
-spring.datasource.url=jdbc:mysql://localhost/db_name?createDatabaseIfNotExist=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost/db_name?createDatabaseIfNotExist=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8}
 #spring.datasource.url=jdbc:mysql://localhost/template_db?autoReconnect=true&useSSL=false
 
 # Local
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=${MYSQLDB_USER:root}
+spring.datasource.password=${MYSQLDB_ROOT_PASSWORD:1234}
+
+#Redis
+spring.cache.cache-names=redis
+spring.redis.host=${REDIS_HOST:redis}
 
 # Production
 #spring.datasource.username= ?
@@ -31,8 +35,8 @@ server.port=8080
 # debug=true
 
 # File Upload
-file.upload.url=/opt/tomcat/webapps/abc
-
+#file.upload.url=/opt/tomcat/webapps/abc
+file.upload.url=${UPLOAD_PATH:}
 file.download.base=http://localhost:8080/abc
 
 # Max upload size.
